# tonybenoy.com

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  init-letsencrypt.sh  llms.txt  pyproject.toml  pytest.ini  we.7z
.github/workflows/: ci.yml  ruff.yml
app/: __init__.py  config.py  main.py  utils.py
app/routes/: __init__.py  apps.py  home.py  photography.py
app/static/: robots.txt  sitemap.xml
app/static/css/: style.css  terminal.css
app/static/js/: terminal-fullpage.js  terminal.js
app/templates/: apps.html  base.html  contact.html  index.html  photography.html  terminal.html  timeline.html
db/: counter.db
docker/: Dockerfile
html/: index.html
k3s/: README.md  fastapi.yaml  ingress.yaml  lets-encrypt.yaml
nginx/: app-dev.conf  app.conf
scripts/: backup.sh  clear-cache.sh  common.sh  create-env.sh  deploy-env.sh  deploy.sh  init-ssl.sh  log-rotate.sh  monitor.sh  restore.sh  setup-cron.sh  ssl-verify.sh  start.sh  stop.sh  utility.sh
src/: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  utils.py
src/routes/: apps.py  home.py
src/static/css/: style.css  style2.css
src/static/files/: tony.sh
src/templates/: apps.html  base.html  base2.html  basef.html  clan.html  clans.html  contact.html  index.html  init.html  initq.html  notadmin.html  start.html
tests/: conftest.py  test_config.py  test_main.py  test_routes.py  test_utils.py
