[project]
name = "tonybenoy-com"
version = "2.0.0"
description = "Personal website built with FastAPI"
authors = [
    {name = "Tony", email = "me@tonybenoy.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.11",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "debugpy>=1.8.11",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "bandit>=1.8.0",
    "psutil>=6.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

