[tool.poetry]
name = "tonybenoy-com"
version = "0.1.0"
description = "Personal website\\"
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"
packages = [{include = "tonybenoy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
redis = "^4.5.5"
httpx = "^0.24.0"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
