[tool.poetry]
name = "tonybenoy-com"
version = "0.1.0"
description = ""
authors = ["Tony <me@tonybenoy.com>"]
readme = "README.md"
packages = [{ include = "tonybenoy" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
gunicorn = "^22.0.0"
redis = "^5.0.4"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
ruff = "^0.4.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
