[project]
name = "tonybenoy-com"
version = "0.1.0"
description = "Personal website built with FastAPI"
authors = [
    {name = "Tony", email = "me@tonybenoy.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.2",
    "gunicorn>=22.0.0",
    "redis>=5.0.4",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.1",
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.1",
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "bandit>=1.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"